@@ -22,7 +22,6 @@ var (
 		UndoBlocks uint
 		TrustAll bool
 		UnbanAllPeers bool
-		NoWallet bool
 	}
 
 	CFG struct { // Options that can come from either command line or common file
@@ -183,7 +182,6 @@ func InitConfig() {
 	flag.UintVar(&FLAG.UndoBlocks, "undo", 0, "Undo UTXO with this many blocks and exit")
 	flag.BoolVar(&FLAG.TrustAll, "trust", FLAG.TrustAll, "Trust all scripts inside new blocks (for fast syncig)")
 	flag.BoolVar(&FLAG.UnbanAllPeers, "unban", FLAG.UnbanAllPeers, "Un-ban all peers in databse, before starting")
-	flag.BoolVar(&FLAG.NoWallet, "nowallet", FLAG.NoWallet, "Do not monitor balance of addresses (speeds up chain sync)")
 
 	if CFG.Datadir == "" {
 		CFG.Datadir = sys.BitcoinHome() + "gocoin"
